# slambook

./: README.md
ch1/: README.md
ch10/: README.md
ch10/ceres_custombundle/: SnavelyReprojectionError.h  ceresBundle.cpp
ch10/g2o_custombundle/: g2o_bal_class.h  g2o_bundle.cpp
ch10/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h  projection.h
ch10/g2o_custombundle/common/flags/: command_args.cpp
ch11/: CMakeLists.txt  README.md  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
ch12/: README.md  feature_training.cpp  loop_closure.cpp
ch12/homework/: homework.py
ch13/: README.md
ch13/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp
ch13/dense_monocular/: CMakeLists.txt  dense_mapping.cpp
ch2/: CMakeLists.txt  README.md
ch2/homework/: CMakeLists.txt
ch2/homework/cmake_modules/: FindHELLO.cmake
ch2/new_project/: CMakeLists.txt  use_helloSLAM.cpp
ch3/: README.md
ch3/homework/: CMakeLists.txt  homework.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: README.md
ch4/useSophus/: useSophus.cpp
ch5/: README.md
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/joinMap/: CMakeLists.txt  joinMap.cpp
ch6/: README.md
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/cmake_modules/: FindG2O.cmake
ch7/: CMakeLists.txt  README.md  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch7/homework/: CMakeLists.txt  homework.cpp
ch8/: README.md
ch8/LKFlow/: useLK.cpp
ch8/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
project/: README.md
project/0.1/: CMakeLists.txt
project/0.1/config/: default.yaml
project/0.1/include/myslam/: camera.h  common_include.h  config.h  frame.h  map.h  mappoint.h
project/0.1/lib/: libmyslam.dylib
project/0.1/src/: config.cpp  frame.cpp  map.cpp
project/0.2/config/: default.yaml
project/0.2/include/myslam/: visual_odometry.h
project/0.2/lib/: libmyslam.dylib
project/0.2/src/: visual_odometry.cpp
project/0.2/test/: run_vo.cpp
project/0.3/: CMakeLists.txt
project/0.3/config/: default.yaml
project/0.3/lib/: libmyslam.dylib
project/0.3/src/: visual_odometry.cpp
project/0.3/test/: run_vo.cpp
project/0.4/: CMakeLists.txt
project/0.4/config/: default.yaml
project/0.4/include/myslam/: config.h  g2o_types.h
project/0.4/lib/: libmyslam.dylib
project/0.4/src/: g2o_types.cpp  mappoint.cpp  visual_odometry.cpp
project/0.4/test/: run_vo.cpp
